# hiclaw

./: Makefile  README.md  README.zh-CN.md
.github/workflows/: release.yml
blog/: hiclaw-1.0.4-release.md
blog/zh-cn/: hiclaw-1.0.4-release.md
changelog/: current.md  v1.0.4.md
copaw/: pyproject.toml
copaw/src/copaw_worker/: sync.py  worker.py
docs/: faq.md
docs/zh-cn/: faq.md
install/: hiclaw-install.ps1  hiclaw-install.sh
manager/: Dockerfile
manager/agent/: SOUL.md  TOOLS.md  workers-registry.json
manager/agent/skills/matrix-server-management/: SKILL.md
manager/agent/skills/worker-management/: SKILL.md
manager/agent/skills/worker-management/scripts/: create-worker.sh  get-worker-install-cmd.sh  lifecycle-worker.sh  push-worker-skills.sh
manager/agent/worker-skills/: README.md
manager/agent/worker-skills/github-operations/: SKILL.md
manager/scripts/init/: setup-higress.sh  start-manager-agent.sh  start-mc-mirror.sh
worker/agent/: AGENTS.md
worker/scripts/: worker-entrypoint.sh
